--- a/incidental.yml
+++ b/incidental.yml
@@ -38,6 +38,8 @@ dependencies:
   - pickleshare=0.7.5=py_1003
   - pip=23.1.2=py311h06a4308_0
   - platformdirs=3.8.0=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.38=pyha770c72_0
+  - prompt_toolkit=3.0.38=hd8ed1ab_0
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pure_eval=0.2.2=pyhd8ed1ab_0
   - pygments=2.15.1=pyhd8ed1ab_0
@@ -69,6 +71,7 @@ dependencies:
     - async-timeout==4.0.2
     - attrs==23.1.0
     - base58==2.1.1
+    - bert-score==0.3.13
     - black==21.12b0
     - blinker==1.6.2
     - brotli==1.0.9
@@ -77,6 +80,8 @@ dependencies:
     - charset-normalizer==2.1.1
     - click==7.1.2
     - cmake==3.25.0
+    - contourpy==1.1.0
+    - cycler==0.11.0
     - datasets==2.13.0
     - dill==0.3.6
     - docker-pycreds==0.4.0
@@ -84,6 +89,7 @@ dependencies:
     - evaluate==0.4.0
     - filelock==3.9.0
     - flake8==6.0.0
+    - fonttools==4.40.0
     - frozenlist==1.3.3
     - fsspec==2023.6.0
     - gitdb==4.0.10
@@ -96,8 +102,10 @@ dependencies:
     - jinja2==3.1.2
     - joblib==1.2.0
     - jsonschema==4.17.3
+    - kiwisolver==1.4.4
     - lit==15.0.7
     - markupsafe==2.1.2
+    - matplotlib==3.7.1
     - mccabe==0.7.0
     - mpmath==1.2.1
     - multidict==6.0.4
@@ -105,7 +113,9 @@ dependencies:
     - multivolumefile==0.2.3
     - mypy-extensions==1.0.0
     - networkx==3.0
+    - nltk==3.8.1
     - numpy==1.24.1
+    - openai==0.27.8
     - pandas==2.0.2
     - pathspec==0.11.1
     - pathtools==0.1.2
@@ -121,6 +131,7 @@ dependencies:
     - pycryptodomex==3.18.0
     - pydeck==0.8.1b0
     - pyflakes==3.0.1
+    - pyparsing==3.1.0
     - pyppmd==1.0.0
     - pyrsistent==0.19.3
     - pytest==7.3.2
@@ -145,6 +156,9 @@ dependencies:
     - toml==0.10.2
     - tomli==1.2.3
     - toolz==0.12.0
+    # - torch==2.0.0+cu118
+    # - torchaudio==2.0.1+cu118
+    # - torchvision==0.15.1+cu118
     - tornado==6.3.2
     - tqdm==4.65.0
     - transformers==4.30.2
